pay btn alignment issue

--- a/app/styles/controllers/profile/content/_assessments.scss
+++ b/app/styles/controllers/profile/content/_assessments.scss
@@ -191,7 +191,8 @@
           }
           .play-btn {
             color: $blue-400;
-            padding: 6px;
+            padding: 6px 6px 0px 0px;
+            margin: 3px 10px;
           }
 
           .course-add-btn {
@@ -245,36 +246,4 @@
       }
     }
   }
-  // .gru-standard-card {
-  //   .panel .panel-footer {
-  //     padding: 0px !important;
-  //     .options {
-  //       padding: 0px !important;
-  //       .preview-btn {
-  //         height: 44px;
-  //         background-color: $blue-400;
-  //       }
-  //     }
-  //   }
-  //   .panel {
-  //     .cca-description {
-  //       .remixed-by {
-  //         .title {
-  //           width: 63px !important;
-  //         }
-  //         .owner {
-  //           max-width: 75px !important;
-  //         }
-  //       }
-  //       .author {
-  //         .title {
-  //           width: 63px !important;
-  //         }
-  //         .owner {
-  //           max-width: 75px !important;
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
 }
