--- a/app/styles/controllers/profile/content/_collections.scss
+++ b/app/styles/controllers/profile/content/_collections.scss
@@ -209,7 +209,8 @@
           }
           .play-btn {
             color: $blue-400;
-            padding: 6px;
+            padding: 6px 6px 0px 0px;
+            margin: 3px 10px;
           }
 
           .course-add-btn {
